<resources>
    <string name="app_name">Librarian</string>
    <string name="home">Главная страница</string>
    <string name="search">Поиск</string>
    <string name="library">Библиотека</string>
    <string name="heart">Избранные</string>
    <string name="user">Мой аккаунт</string>

    <string-array name="spinner_array">
        <item>Фильтровать</item>
        <item>По популярности</item>
        <item>По рейтингу</item>
        <item>Новинки</item>
    </string-array>

    <string name="author">Автор:</string>
    <string name="book_name">Название:</string>
    <string name="year">Год:</string>
    <string name="genre">Жанр:</string>
    <string name="annotation">Аннотация:</string>

    <string name="read">Прочитано</string>
    <string name="favourite">Избранные</string>

    <string name="recommend">Рекомендуем</string>
    <string name="best_books">Лучшие книги</string>
    <string name="popular_books">Популярные книги</string>
    <string name="new_books">Новинки</string>

    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="confirm_password">Подтвердите пароль</string>

    <string name="register">Зарегистрироваться</string>
    <string name="enter">Войти</string>

    <string name="enter_login">Введите логин</string>
    <string name="enter_password">Введите пароль</string>
    <string name="enter_valid_email">Введите верный email</string>
    <string name="enter_valid_password">Пароль должен содержать минимум 8 знаков</string>
    <string name="passwords_do_not_match">Пароли не совпадают</string>
    <string name="not_valid_login_or_password">Неверный логин или пароль</string>

    <string name="successful_registration">Регистрация успешно завершена</string>
    <string name="successful_enter">Вы успешно вошли</string>

    <string name="friends">Друзья</string>
    <string name="edit_profile">Редактировать профиль</string>

    <string name="logout">Выйти</string>
    <string name="noFavouriteBooks">Избранные книги не найдены</string>
    <string name="save">Сохранить рейтинг</string>
    <string name="rating_bigger_zero">Выставляемый рейтинг должен быть больше нуля</string>
    <string name="rating_was_saved">Рейтинг был успешно сохранен</string>

    <string name="comments_0">комментариев</string>
    <string name="comments_1">комментарий</string>
    <string name="comments_2">комментария</string>
    <string name="leaveComment">Оставить комментарий</string>
    <string name="commentHint">Комментарий...</string>
    <string name="sendComment">Отправить</string>

    <string name="genres">Жанры</string>
    <string name="apply">Применить</string>
    <string name="fantasy">фэнтези</string>
    <string name="detectives">детективы</string>
    <string name="scienceFiction">научная\nфантастика</string>
    <string name="loveRomances">любовные\nроманы</string>
    <string name="fairyTales">сказки</string>
    <string name="horrors">ужасы</string>
</resources>