<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/homeItem"
        android:icon="@drawable/home_icon"
        android:title="@string/home"
        app:showAsAction="always" />

    <item
        android:id="@+id/searchItem"
        android:icon="@drawable/search_lines"
        android:title="@string/search"
        app:showAsAction="always" />

    <item
        android:id="@+id/bookItem"
        android:icon="@drawable/open_book"
        android:title="@string/library"
        app:showAsAction="always" />

    <item
        android:id="@+id/heartItem"
        android:icon="@drawable/heart"
        android:title="@string/heart"
        app:showAsAction="always" />

    <item
        android:id="@+id/userItem"
        android:icon="@drawable/user"
        android:title="@string/user"
        app:showAsAction="always" />
</menu>