<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background">

    <FrameLayout
        android:id="@+id/headerLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true">

        <include layout="@layout/header" />
    </FrameLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/menuLayout"
        android:layout_below="@id/headerLayout">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_recommend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:fontFamily="@font/sans_caption_regular"
                android:text="@string/recommend"
                android:textColor="@color/black"
                android:textSize="16dp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/firstBooksRecyclerHorizontalView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_recommend"
                android:divider="@null"
                android:dividerHeight="0dp" />

            <TextView
                android:id="@+id/tv_bestBooks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/firstBooksRecyclerHorizontalView"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/sans_caption_regular"
                android:text="@string/best_books"
                android:textColor="@color/black"
                android:textSize="16dp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/secondBooksRecyclerHorizontalView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_bestBooks"
                android:divider="@null"
                android:dividerHeight="0dp" />

            <TextView
                android:id="@+id/tv_popularBooks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/secondBooksRecyclerHorizontalView"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/sans_caption_regular"
                android:text="@string/popular_books"
                android:textColor="@color/black"
                android:textSize="16dp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/thirdBooksRecyclerHorizontalView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_popularBooks"
                android:divider="@null"
                android:dividerHeight="0dp" />

            <TextView
                android:id="@+id/tv_newBooks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/thirdBooksRecyclerHorizontalView"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/sans_caption_regular"
                android:text="@string/new_books"
                android:textColor="@color/black"
                android:textSize="16dp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/fourthBooksRecyclerHorizontalView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_newBooks"
                android:divider="@null"
                android:dividerHeight="0dp" />

        </RelativeLayout>
    </ScrollView>

    <FrameLayout
        android:id="@+id/menuLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <include layout="@layout/my_menu" />
    </FrameLayout>

</RelativeLayout>